added additional css styling

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ form {
 .instructions {
   padding: 15px;
   border: 1px solid rgba(39, 33, 66, 0.5);
-  width: 70%;
+  width: 80%;
   border-radius: 50px;
   line-height: 20px;
   color: #272044;
@@ -56,14 +56,23 @@ form {
 }
 
 .submit-button {
+  width: 200px;
+  height: 40px;
   margin-left: 10px;
-  background: #272044;
-  color: #f9f7fe;
+  margin-top: 5px;
+  background: linear-gradient(90deg, #e7e7e7 30%, #fe668c 0) 100%/50px 100%
+      no-repeat,
+    conic-gradient(from 55deg at left, #fee7b3, #0000 1deg 69deg, #fee7b3 70deg)
+      100% 8px / calc(100% - 40px) 16px repeat-y,
+    linear-gradient(#0003 50%, #0000 0) 100% 8px / calc(100% - 41px) 32px
+      repeat-y,
+    linear-gradient(90deg, #2b2026 15px, #fee7b3 16px 40px, #fecc2b 0);
+  clip-path: polygon(0 50%, 42px 0, 100% 0, 100% 100%, 42px 100%);
+  border-radius: 0 10px 10px 0;
+  color: black;
   border: none;
-  width: 100px;
   font-size: 16px;
-  border-radius: 45px;
-  padding: 15px 25px;
+  font-weight: bold;
 }
 
 .child-story {
