--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ form {
 
 .instructions {
   padding: 15px;
-  border: 1px solid rgba(39, 33, 66, 0.5);
+  border: 1px rgba(39, 33, 66, 0.5);
   width: 80%;
   border-radius: 50px;
   line-height: 20px;
