--- a/src/style.css
+++ b/src/style.css
@@ -89,3 +89,7 @@ footer {
   font-size: 15px;
   margin-top: 30px;
 }
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
